fix office photo style and list-links-invisible fot landscape

--- a/cv/cv.css
+++ b/cv/cv.css
@@ -20,7 +20,10 @@ header {
 
 @media (orientation: landscape) {
 
-    
+    header {
+        background-color: var(--one);
+    }
+
     .cv-section {
         margin: 10vh;
         max-width: 100vw;
