--- a/style.css
+++ b/style.css
@@ -189,13 +189,10 @@ a li:active{
 /* SECTION MY PROJECTS */
 
 .my-projects {
-    /* display: grid; */
     display: flex;
     overflow-x: scroll;
     gap: 2vh;
     padding: 0 2.5vw;
-    /* margin: 10vh auto 0 auto; */
-    /* max-width: 100vw; */
 }
 
 .my-projects::-webkit-scrollbar {
@@ -447,19 +444,18 @@ textarea::placeholder {
 @media (orientation: landscape)  {
 
     header {
-        background-color: var(--one);
+        align-items: center;
     }
 
     .list-links-invisible {
         display: flex;
-        top: 0;
+        top: 1vh;
         right: 0;
         min-width: 70vw;
-        gap: 3vw;
+        gap: 4vw;
         justify-content: space-around;
         font-size: 1.5rem;
         font-weight: bold;
-        align-content: center;
     }
 
     .list-links-invisible a {
@@ -472,16 +468,19 @@ textarea::placeholder {
         color: var(--four);
     }
 
-    
     .apresentation {
         background-size: contain;
         background-position: right;
     }
 
     .my-projects {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        margin: 10vh;
+        margin: 20vh auto;
+    }
+
+    .my-projects div{
+        padding: 2vw 0;
+       min-width: 30vw;
+       min-height: 60vh;
     }
 
     .fa-bars, .fa-xmark, 
@@ -503,7 +502,8 @@ textarea::placeholder {
     }
 
     .office-photo {
-        min-height: 90vh;
+        min-height: 60vh;
+        background-position: top;
     }
 
     input[type="text"],
@@ -580,7 +580,8 @@ textarea::placeholder {
     .fa-bars::after, 
     .fa-bars::before,
     .fa-xmark::after,
-    .fa-xmark::before {
+    .fa-xmark::before,
+    .dot-section {
         display: none;
     }
 
@@ -658,8 +659,9 @@ textarea::placeholder {
 
     .office-photo {
         min-height: 50vh;
-        background-position: top;
-        background-size: contain;
+        min-width: 50vw;
+        max-width: 50vw;
+        margin: 0 auto;
     }
 
 }
